--- a/les.html
+++ b/les.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta charset="UTF-8">
 </head>
 <body>
 
@@ -7,16 +8,16 @@
 
 <h2>Paardenronde</h2>
 
-<p>Stel je bent een paard uit het schaakspel en je staat in de stal (<img src="https://pohl.experiments.cs.kuleuven.be/co-de/pluginfile.php/42/mod_page/content/19/emoji_paard%20%281%29.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">).<br>Je wilt nu graag in elk vakje exact één keer komen om er het eten op te eten.<br>Daarna
-wil je terug naar de stal (<img src="https://pohl.experiments.cs.kuleuven.be/co-de/pluginfile.php/42/mod_page/content/19/paard_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">).</b></p>
+<p>Stel je bent een paard uit het schaakspel en je staat in de stal (<img src="paard_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">).<br>Je wilt nu graag in elk vakje exact één keer komen om er het eten op te eten.<br>Daarna
+wil je terug naar de stal (<img src="paard_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">).</b></p>
 <p><b>Welke volgorde van vakjes kan je volgen?<br>Test hieronder of jouw volgorde klopt.</b></p>
 
 <p>Het paard in een schaakspel beweegt steeds 1 vakje in één richting en 2 in een andere richting.</p>
 
-<img src="https://pohl.experiments.cs.kuleuven.be/co-de/pluginfile.php/42/mod_page/content/19/knights%20tour%20stappen%20paard.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" id="yui_3_17_2_1_1613477057404_28" width="325" height="50">
+<img src="knights%20tour%20stappen%20paard.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" id="yui_3_17_2_1_1613477057404_28" width="325" height="50">
 
-<p>Vanuit de stal (<img src="https://pohl.experiments.cs.kuleuven.be/co-de/pluginfile.php/42/mod_page/content/19/paard_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">) kan je dus naar de volgende
-vakjes:&nbsp;<span style="font-size: 1rem;"><img src="https://pohl.experiments.cs.kuleuven.be/co-de/pluginfile.php/42/mod_page/content/19/wortel_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">&nbsp;,&nbsp;<img src="https://pohl.experiments.cs.kuleuven.be/co-de/pluginfile.php/42/mod_page/content/19/appel_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20"> &amp;&nbsp;<img src="https://pohl.experiments.cs.kuleuven.be/co-de/pluginfile.php/42/mod_page/content/19/tomaat_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20"></span></p>
+<p>Vanuit de stal (<img src="paard_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">) kan je dus naar de volgende
+vakjes:&nbsp;<span style="font-size: 1rem;"><img src="wortel_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">&nbsp;,&nbsp;<img src="appel_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20"> &amp;&nbsp;<img src="tomaat_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20"></span></p>
 
 <h3>Opdracht: zoek een volgorde van vakjes.</h3>
 
@@ -29,7 +30,7 @@ vakjes:&nbsp;<span style="font-size: 1rem;"><img src="https://pohl.experiments.c
 <h2>Stadsgids</h2>
 
 <p><b>Stel je bent een stadsgids en je wilt op één dag tijd een groep toeristen zoveel
-mogelijk van de stad laten zien. Je staat aan het hotel (<img src="https://pohl.experiments.cs.kuleuven.be/co-de/pluginfile.php/60/mod_page/content/19/hotel_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20"></b><b style="font-size: 1rem;">) en hebt een dagticket
+mogelijk van de stad laten zien. Je staat aan het hotel (<img src="hotel_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20"></b><b style="font-size: 1rem;">) en hebt een dagticket
 gekocht voor de metro voor de toeristen.</b></p>
 
 <p><span>Je wilt één keer bij elke bezienswaardigheid passeren, stapt steeds af na één halte en wilt 's avonds terug eindigen aan het hotel.</span></p>
