First version of slides

--- a/les.html
+++ b/les.html
@@ -21,11 +21,11 @@ vakjes:&nbsp;<span style="font-size: 1rem;"><img src="wortel_emoji.png" alt="" r
 
 <h3>Opdracht: zoek een volgorde van vakjes.</h3>
 
-<iframe src="https://pohl.experiments.cs.kuleuven.be/co-de/resources/knights_tour/assignment1/nl/" height="600px" width="1000px" style="display:block;margin:40px;"></iframe>
+<iframe src="https://pohl.experiments.cs.kuleuven.be/co-de/resources/knights_tour/assignment1/nl/" height="600px" width="1000px" style="max-width:100%;max-height:100%"></iframe>
 
 <h3>Opdracht: zoek een volgorde van vakjes met ondersteuning.</h3>
 
-<iframe src="https://pohl.experiments.cs.kuleuven.be/co-de/resources/knights_tour/assignment1_support/nl/ " height="600px" width="1000px" style="display:block;margin:40px;"></iframe>
+<iframe src="https://pohl.experiments.cs.kuleuven.be/co-de/resources/knights_tour/assignment1_support/nl/ " height="600px" width="1000px" style="max-width:100%;max-height:100%"></iframe>
 
 <h2>Stadsgids</h2>
 
@@ -37,11 +37,11 @@ gekocht voor de metro voor de toeristen.</b></p>
 
 <p><span>Welke volgorde van bezienswaardigheden zou jij volgen?<br>Test hieronder of je volgorde klopt.</span></p>
 
-<iframe src="https://pohl.experiments.cs.kuleuven.be/co-de/resources/knights_tour/assignment2/nl/"  height="600px" width="1000px" style="display:block;margin:40px;"></iframe>
+<iframe src="https://pohl.experiments.cs.kuleuven.be/co-de/resources/knights_tour/assignment2/nl/"  height="600px" width="1000px" style="max-width:100%;max-height:100%"></iframe>
 
 <p>Welke opdracht vond je het moeilijkste?</p>
 
-<iframe src="https://pohl.experiments.cs.kuleuven.be/co-de/resources/knights_tour/transformation/nl/" height="600px" width="1000px" style="display:block;margin:40px;" ></iframe>
+<iframe src="https://pohl.experiments.cs.kuleuven.be/co-de/resources/knights_tour/transformation/nl/" height="600px" width="1000px" style="max-width:100%;max-height:100%" ></iframe>
 
 <!--
 <iframe src="https://pohl.experiments.cs.kuleuven.be/co-de/pluginfile.php/75/mod_assign/intro/Opgave1_twee_extra.png" ></iframe>
