Fix image paths

--- a/slides/index.html
+++ b/slides/index.html
@@ -36,18 +36,18 @@
 <section>
 <h2>Paardenronde</h2>
 
-<p>Stel je bent een paard uit het schaakspel en je staat in de stal (<img src="/paard_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">).</p>
-<img src="/Opgave1.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom">
+<p>Stel je bent een paard uit het schaakspel en je staat in de stal (<img src="../paard_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">).</p>
+<img src="../Opgave1.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom">
 <p>Je wilt nu graag in elk vakje exact één keer komen om er het eten op te eten.</p>
 <p>Daarna
-wil je terug naar de stal (<img src="/paard_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">).</b></p>
+wil je terug naar de stal (<img src="../paard_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">).</b></p>
 
 <p>Het paard in een schaakspel beweegt steeds 1 vakje in één richting en 2 in een andere richting.</p>
 
-<img src="/knights%20tour%20stappen%20paard.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" id="yui_3_17_2_1_1613477057404_28" width="325" height="50">
+<img src="../knights%20tour%20stappen%20paard.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" id="yui_3_17_2_1_1613477057404_28" width="325" height="50">
 
-<p>Vanuit de stal (<img src="/paard_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">) kan je dus naar de volgende
-vakjes:&nbsp;<span style="font-size: 1rem;"><img src="/wortel_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">&nbsp;,&nbsp;<img src="/appel_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20"> &amp;&nbsp;<img src="/tomaat_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20"></span></p>
+<p>Vanuit de stal (<img src="../paard_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">) kan je dus naar de volgende
+vakjes:&nbsp;<span style="font-size: 1rem;"><img src="../wortel_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">&nbsp;,&nbsp;<img src="../appel_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20"> &amp;&nbsp;<img src="../tomaat_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20"></span></p>
 
 </section><section>
 
@@ -67,14 +67,14 @@ vakjes:&nbsp;<span style="font-size: 1rem;"><img src="/wortel_emoji.png" alt="" 
 <h2>Stadsgids</h2>
 
 <p>Stel je bent een stadsgids en je wilt op één dag tijd een groep toeristen zoveel mogelijk van de stad laten zien.</p>
-<p> Je staat aan het hotel (<img src="/hotel_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">) en hebt een dagticket gekocht voor de metro voor de toeristen.</p>
-<img src="/Opgave2.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom">
+<p> Je staat aan het hotel (<img src="../hotel_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">) en hebt een dagticket gekocht voor de metro voor de toeristen.</p>
+<img src="../Opgave2.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom">
 
 <p class="fragment"><span>Je wilt de stad als volgt bezoeken: 
 	<ul>
 		<li class="fragment">één keer bij elke bezienswaardigheid passeren,</li>
 		<li class="fragment">steeds afstappen na één halte en</li>
-		<li class="fragment">'s avonds terug eindigen aan het hotel (<img src="/hotel_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">).</li>
+		<li class="fragment">'s avonds terug eindigen aan het hotel (<img src="../hotel_emoji.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom" width="20" height="20">).</li>
 	</ul>
 </span></p>
 
