Kleine wijziging laatste slide

--- a/slides/index.html
+++ b/slides/index.html
@@ -245,9 +245,9 @@ Plaatsnamen etc zijn niet van belang -> letters
 	<p style="margin-top:30px">Zijn er nog vragen?</p>
 	<p style="margin-top:30px">We vragen jullie nog om volgende zaken te doen:</p>
 	<ul>
-		<li>Vul volgende vragenlijst in</li>
-		<ul>
-			<li>Doe dit liefst nu</li>
+		<li>Vul nu volgende vragenlijst in</li>
+		<ul> <!-- TODO -->
+			<li>Link: </li>
 		</ul>
 		<li style="margin-top:10px">Leg nog een bebrastest af</li>
 		<ul>
