--- a/slides/index.html
+++ b/slides/index.html
@@ -32,6 +32,7 @@
 			<div class="slides">
 				<section>
 <p>Gebaseerd op de Knight's Tour & Tour Guide les van <a target="_blank" href="https://computationeeldenken.org/">het Co-De platform</a>.</p>
+					<p>En die is gebaseerd op een les uit het boek 'The power of computational thinking?'</a>.</p>
 </section>
 <section>
 <h2>Paardenronde</h2>
@@ -211,9 +212,11 @@ Plaatsnamen etc zijn niet van belang -> letters
 </section>
 <section>
 <h2>Decompositie in subproblemen</h2>
-<p class="fragment">Een grafe opstellen.</p>
-<p class="fragment">Een (hamiltoniaans) pad zoeken in de grafe</p>
-<p class="fragment">Het pad omvormen naar een reeks sprongen op het bord</p>
+<ul>
+<li class="fragment">Een grafe opstellen.</li>
+<li class="fragment">Een (hamiltoniaans) pad zoeken in de grafe</li>
+<li class="fragment">Het pad omvormen naar een reeks sprongen op het bord</li>
+</ul>
 <p class="fragment">Elk subprobleem kan onafhankelijk worden opgelost.</p>
 <!-- algoritme voor ham pad kan worden hergebruikt --->
 </section>
@@ -228,10 +231,12 @@ Plaatsnamen etc zijn niet van belang -> letters
 
 <section>
 	<h2>Extra opdrachten</h2>
+	<!-- focus op deel om grafe op te stellen -->
 	<span class="fragment">
 	<p>Hoe verandert de oplossingsmethode als we 2 vakjes toevoegen aan het veld?</p>
 <img src="../Opgave1_twee_extra.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom">
 <img class="fragment" src="../Opgave1_twee_extra_juist.png" alt="" role="presentation" class="img-responsive atto_image_button_text-bottom">
+<!-- Opstellen grafe blijft, maar methode om hamiltoniaans pad te vinden, moet algemeen genoeg zijn -->
 	</span>
 	<p class="fragment">Hoe verandert de oplossingsmethode als het paard andere sprongen maakt?</p>
 	<p class="fragment">Hoe verandert de oplossingsmethode als het paard verschillende soorten sprong kan maken?</p>
@@ -241,17 +246,17 @@ Plaatsnamen etc zijn niet van belang -> letters
 </section>
 <section>
 	<h2>Einde van de workshop</h2>
-	<p style="margin-top:30px">Bedankt voor het luisteren</p>
+	<p style="margin-top:30px">Bedankt voor het luisteren.</p>
 	<p style="margin-top:30px">Zijn er nog vragen?</p>
 	<p style="margin-top:30px">We vragen jullie nog om volgende zaken te doen:</p>
 	<ul>
-		<li>Vul nu volgende vragenlijst in</li>
+		<li>Vul nu volgende vragenlijst in:</li>
 		<ul> <!-- TODO -->
 			<li>Link: </li>
 		</ul>
-		<li style="margin-top:10px">Leg nog een bebrastest af</li>
+		<li style="margin-top:10px">Leg nog een bebrastest af.</li>
 		<ul>
-			<li>Je krijgt hierover een mail</li>
+			<li>Je krijgt hierover een mail.</li>
 		</ul>
 </section>
 			</div>
