--- a/slides/index.html
+++ b/slides/index.html
@@ -194,7 +194,7 @@ Druppel: Paaseiland
 	</section>
 <section>
 	<h2>Abstractie</h2>
-	<p class="fragment">Analyseren van welke deel van de voorgestelde informatie van belang was.</p>
+	<p class="fragment">Analyseren welk deel van de voorgestelde informatie van belang was.</p>
 	<p class="fragment">Welke gegevens waren van belang?</p>
 <!--
 Welke plaatsen er zijn & welke verbonden zijn
@@ -251,8 +251,8 @@ Plaatsnamen etc zijn niet van belang -> letters
 	<p style="margin-top:30px">We vragen jullie nog om volgende zaken te doen:</p>
 	<ul>
 		<li>Vul nu volgende vragenlijst in:</li>
-		<ul> <!-- TODO -->
-			<li>Link: </li>
+		<ul>
+							<li>Link: <a href="https://forms.gle/74Juh2voQCBPmeeF6" target="_blank">https://forms.gle/74Juh2voQCBPmeeF6</a> </li>
 		</ul>
 		<li style="margin-top:10px">Leg nog een bebrastest af.</li>
 		<ul>
