--- a/opdracht2.html
+++ b/opdracht2.html
@@ -1,10 +1,13 @@
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
+
 <body>
 
-<iframe src="https://pohl.experiments.cs.kuleuven.be/co-de/resources/knights_tour/assignment2/nl/" height="580" width="970" style="max-width:100%;max-height:100%;"></iframe>
+  <iframe src="/assignment2/" height="580" width="970" style="max-width:100%;max-height:100%;"></iframe>
 </body>
+
 </html>
