Fix local paths

--- a/slides/index.html
+++ b/slides/index.html
@@ -84,7 +84,7 @@
 				<!--<p>https://jhoobergs.github.io/workshop/opdracht1.html</p> -->
 				<p>https://bit.ly/3bIQQ60</p>
 
-				<iframe data-preload data-src="/assignment1/" height="580" width="970" style="max-width:100%;max-height:100%;"></iframe>
+				<iframe data-preload data-src="../assignment1/" height="580" width="970" style="max-width:100%;max-height:100%;"></iframe>
 
 			</section>
 			<section>
@@ -109,7 +109,7 @@ Other methods
 Didn't use any specific methods
 -->
 
-				<iframe data-preload data-src="/assignment1_support/ " height="580" width="970" style="max-width:100%;max-height:100%;"></iframe>
+				<iframe data-preload data-src="../assignment1_support/ " height="580" width="970" style="max-width:100%;max-height:100%;"></iframe>
 			</section>
 			<section>
 				<h3>Hoe moeilijk vond je deze opgave?</h3>
@@ -145,7 +145,7 @@ Didn't use any specific methods
 				</p>
 				<!--<p>https://jhoobergs.github.io/workshop/opdracht2.html</p> -->
 				<p>https://bit.ly/2ZUYch2</p>
-				<iframe data-preload data-src="/assignment2/" height="580" width="970" style="max-width:100%;max-height:100%;"></iframe>
+				<iframe data-preload data-src="../assignment2/" height="580" width="970" style="max-width:100%;max-height:100%;"></iframe>
 			</section>
 			<section>
 
@@ -170,7 +170,7 @@ Other methods
 Didn't use any specific methods
 -->
 
-				<iframe data-preload data-src="/assignment2/" height="580" width="970" style="max-width:100%;max-height:100%;"></iframe>
+				<iframe data-preload data-src="../assignment2/" height="580" width="970" style="max-width:100%;max-height:100%;"></iframe>
 			</section>
 			<section>
 				<h3>Hoe moeilijk vond je deze opgave?</h3>
@@ -183,7 +183,7 @@ Didn't use any specific methods
 				<p class="fragment">Beschrijf de gelijkenissen tussen beide opgaves.</p>
 
 				<p class="fragment">Zijn beide opgaves wel zo verschillend?</p>
-				<iframe class="fragment" data-preload data-src="/transformation/" height="580" width="970" style="max-width:100%;max-height:100%;"></iframe>
+				<iframe class="fragment" data-preload data-src="../transformation/" height="580" width="970" style="max-width:100%;max-height:100%;"></iframe>
 			</section>
 
 			<section>
