--- a/opdracht1.html
+++ b/opdracht1.html
@@ -7,7 +7,7 @@
 
 <body>
 
-  <iframe src="/assignment1/" height="580" width="970" style="max-width:100%;max-height:100%;"></iframe>
+  <iframe src="assignment1/" height="580" width="970" style="max-width:100%;max-height:100%;"></iframe>
 </body>
 
 </html>
